# qt-app-git

./: README.md  qml_interview_QA.md
10_Menu/: main.cpp  main.qml
11_Coulum_layout/: main.cpp  main.qml
12_GridLayout/: main.cpp  main.qml
13_Flow_layout/: main.cpp  main.qml
14_ListView/: main.cpp  main.qml
15_ListView2/: main.cpp  main.qml
16_Listview_conatctList/: main.cpp  main.qml
17_GridView_colors/: main.cpp  main.qml
18_Repeater/: main.cpp  main.qml
19_Repeater_listview/: main.cpp  main.qml
Button/: main.cpp  main.qml
DeafultQtQuickApp/: CMakeLists.txt  main.cpp  main.qml
RowButton/: main.cpp  main.qml
imageFromInternate/: CMakeLists.txt  main.cpp  main.qml
item/: main.cpp  main.qml
mouseArea/: main.cpp  main.qml
pie-chart/: CMakeLists.txt  main.cpp
smallimages/: main.cpp  main.qml  resources.qrc  smallimages.pro
taphandler/: main.qml
